--- a/Noot/60333-summer-reunion^008/rus.textile
+++ b/Noot/60333-summer-reunion^008/rus.textile
@@ -28,7 +28,7 @@
 
 «Правильно, — ответила Тесса, зная, откуда она исходит, — так что мы могли бы также гордиться этим».
 
-Звук мочи Зои, падающей на воду, внезапно прекратился. «Точно», сказала она ровным голосом, прежде чем по маленькой в*нной раздалось ещё несколько коротких очередей. Тесса могла сказать, что Зои выжимала ещё несколько струй, чтобы убедиться, что она полностью опустошена. Обычно это знание смутило бы кроткую душу Тессы, но их разговор заставил её задуматься о своём подходе к туалетному этикету, когда она вытиралась. Наконец, Зоя дала последний толчок, который, возможно, был немного переусердствовал, и Тесса никак не могла притвориться, что не слышит громкий пердёж, который он произвёл.
+Звук мочи Зои, падающей на воду, внезапно прекратился. «Точно», сказала она ровным голосом, прежде чем по маленькому туалету раздалось ещё несколько коротких очередей. Тесса могла сказать, что Зои выжимала ещё несколько струй, чтобы убедиться, что она полностью опустошена. Обычно это знание смутило бы кроткую душу Тессы, но их разговор заставил её задуматься о своём подходе к туалетному этикету, когда она вытиралась. Наконец, Зоя дала последний толчок, который, возможно, был немного переусердствовал, и Тесса никак не могла притвориться, что не слышит громкий пердёж, который он произвёл.
 
 Это сняло напряжение, и двое друзей расхохотались, ещё больше сблизившись благодаря этому немного странному общему опыту, несмотря на то, что их разделяла перегородка. «Лучше снаружи, чем внутри!» Зои удалось между взрывами смеха.
 
@@ -84,9 +84,9 @@
 
 Коридор, ведущий к каждой кровати, слегка закружился, когда Кевин дошёл до комнаты, в которой узнал свою, и вошёл. Из своей сумки, стоявшей у деревянного комода, он достал пластиковый наматрасник и поднял его для осмотра. В этот момент он забыл о тепле вечера, и его проблемы снова нахлынули на него. Он знал, что необходимо содержать постель Джейми в чистоте — он не мог рисковать тем, что друзья узнают о его проблемах, а если матрас будет накрыт, ему будет намного легче скрывать любые ночные происшествия. Но всё же, неужели он про сон на пластиковом протекторе? Это наполнило Кевина чувством стыда и вины, когда он снял кровать и закрепил новый протектор на месте, прежде чем положить на место остальные аккуратно застеленные постельные принадлежности. Он работал быстро, как работал на собственной свежевымытой кровати в то июльское утро, когда Джейми написал ему, чтобы убедиться, что никто не придёт его искать.
 
-Как только Кевин выскользнул из комнаты, чувствуя себя так, как будто провернул какой-то шпион, он внезапно понял, что виски уже сказалось на его мочевом пузыре. Было неизбежно, что ему придётся зайти в единственную в*нную в доме, прежде чем вернуться к остальным. Сразу по коридору от общежития находилась в*нная комната, тесноватая, но безукоризненно белая, с отдельными в*нной и душем, раковиной и туалетом. Стены украшали шкафы с зеркальными дверцами, а на кафельном полу был ровно разложен коврик для в*нной. Кевин запер дверь и направился к туалету, в который опустошил наполняющий мочевой пузырь. Степень его опьянения уменьшилась, когда он изо всех сил пытался сфокусировать взгляд на одной точке на стене.
+Как только Кевин выскользнул из комнаты, чувствуя себя так, как будто провернул какой-то шпион, он внезапно понял, что виски уже сказалось на его мочевом пузыре. Было неизбежно, что ему придётся зайти в единственный туалет в доме, прежде чем вернуться к остальным. Сразу по коридору от общежития находился санузел, тесноватый, но безукоризненно белая, с отдельными в%нными и душем, раковиной и туалетом. Стены украшали шкафы с зеркальными дверцами, а на кафельном полу был ровно разложен коврик. Кевин запер дверь и направился к унитазу, в который он опустошил наполняющий его мочевой пузырь. Степень его опьянения уменьшилась, когда он изо всех сил пытался сфокусировать взгляд на одной точке на стене.
 
-Приятное облегчение от столь необходимой ему мочи было прервано двумя быстрыми стуками в дверь. Каким-то чудом Кевину удалось удержать поток воды от удара о сиденье унитаза, поскольку он был выведен из оцепенения шумом, за которым последовал сладкий, напряжённый голос Зои. Она произносила каждое слово так, как будто ей не хватило времени, чтобы закончить предложение.
+Приятное облегчение от столь необходимого ему писанья было прервано двумя быстрыми стуками в дверь. Каким-то чудом Кевину удалось удержать поток воды от удара о сиденье унитаза, поскольку он был выведен из оцепенения шумом, за которым последовал сладкий, напряжённый голос Зои. Она произносила каждое слово так, как будто ей не хватило времени, чтобы закончить предложение.
 
 «Кевинифи, не торопись, я иду к себе прямо здесь», — выдохнула она. Кевин знал, что лучше не задерживать Зои, когда она отчаянно пыталась воспользоваться туалетом, поэтому он поспешил закончить свои дела и отпереть дверь. Зрелище, открывшееся ему, не было для него незнакомым, но оставалось таким же очаровательным — Зоя стояла, сжав вместе бёдра и зажав одну руку между ног, не в силах стоять даже отдалённо на месте и с отчётливо паническим выражением лица. Как только он открыл дверь, она пронеслась мимо него и сдёрнула джинсы, чтобы сесть, не удосужившись закрыть за собой дверь. Кевин почувствовал, как его лицо вспыхнуло при виде того, как она справляла нужду так открыто, бёдра были сведены вместе, локти на коленях.
 
@@ -104,7 +104,7 @@
 
 Инстинктивно его рука скользнула вниз и схватила его промежность так, как это происходило только тогда, когда у него не было другого способа сдержать поток. Он выбрался из-под своих простыней и встал на пол спальни, безнадёжно извиваясь, пытаясь собрать свою одежду из их грязной кучи на полу одной рукой. Никто не мог поймать его только в этих тонких боксёрах, в отчаянии или нет. Он не мог двигаться быстрее, когда почувствовал тёплую струйку на своей ладони, которая всё ещё сжимала его промежность железной хваткой. Глаза Марка расширились, и он потерял надежду надеть джинсы, накинув мешковатую футболку и ворвавшись в коридор.
 
-Он сразу же увидел, что дверь в в*нную закрыта, но это не было реальностью, которую он был готов принять в спешке. Марк бросился по коридору к двери, потянул за ручку и почувствовал, как его сердце сжалось от результата. Заблокировано.
+Он сразу же увидел, что дверь в туалет закрыта, но это не было реальностью, которую он был готов принять в спешке. Марк бросился по коридору к двери, потянул за ручку и почувствовал, как его сердце сжалось от результата. Заблокировано.
 
 «Извините, минутку», — раздался голос изнутри. Голос Айо. Марк внутренне застонал и ответил единственной вещью, о которой он мог думать, его безумное состояние преобладало над его обычной застенчивостью.
 
@@ -116,7 +116,7 @@
 
 — Ты… можешь… сказать… это, — выдавил он. «Не беспокойся об одежде, это ничего, я даже джинсы не смог надеть». В другое время он мог бы найти этот факт забавным. Не сейчас. Прежде чем она успела ответить, открылась ещё одна дверь, и Кевин выбежал наружу. Ему потребовалось мгновение, чтобы понять, что двое других были там. Он тоже не мог стоять на месте, и его лицо исказила чистая паника.
 
-«Ты тоже?» — спросил он, явно испытывая чрезвычайные ситуации. Вопрос Кевина был встречен парой торопливых кивков. Марк почувствовал, что всё ближе и ближе заливает пол, и повернулся к в*нной.
+«Ты тоже?» — спросил он, явно испытывая чрезвычайные ситуации. Вопрос Кевина был встречен парой торопливых кивков. Марк почувствовал, что всё ближе и ближе заливает пол, и повернулся к туалету.
 
 «Айо, чувак, у нас здесь трое, которым нужно пописить прямо сейчас», — раздражённо сказал он.
 
@@ -144,7 +144,7 @@
 
 «У меня опять течь, Марк. Помоги мне», умоляла Тесса. Он мог видеть, что она была близка к слезам и уж точно близка к тому, чтобы пойти в туалет самой. В лучах утреннего солнца через окно он мог разглядеть малейший блеск на её пальцах, где она действительно просочилась.
 
-Всё, о чём Марк мог думать, это снова беспомощно постучать в дверь в*нной. «Ещё минута!» — смущённо ответил Айо. Марк и Тесса обменялись взглядами, в которых они оба мгновенно поняли, что ни один из них не может позволить себе ждать ни минуты. В глазах обычно зрелой женщины отразилась паника, которая, как знал Марк, указывала на то, что её больше не волнует что-либо, кроме как найти место, где можно пописить. Прибытие Айо потрясло её, и она заговорила с мрачной решимостью.
+Всё, о чём Марк мог думать, это снова беспомощно постучать в дверь туалета. «Ещё минута!» — смущённо ответил Айо. Марк и Тесса обменялись взглядами, в которых они оба мгновенно поняли, что ни один из них не может позволить себе ждать ни минуты. В глазах обычно зрелой женщины отразилась паника, которая, как знал Марк, указывала на то, что её больше не волнует что-либо, кроме как найти место, где можно пописить. Прибытие Айо потрясло её, и она заговорила с мрачной решимостью.
 
 «К чёрту этот сад», — пробормотала она и крепко схватила Марка за руку, протискиваясь мимо него. Должно быть, она не осознавала, смутно подумал Марк, что её кожа была влажной и тёплой от мочи, и он чувствовал, как она перетекает с её ладони на его. Если бы он был менее отчаянным, он мог бы возражать. Дело в том, что Марку казалось, что он обмочится в любую секунду, и любой план был для него желанным. Сад определённо казался лучшим вариантом для каждого из них.
 
@@ -172,7 +172,7 @@
 
 Через несколько секунд именно такими их и нашёл Кевин — обнимающимися на лужайке, всё ниже пояса мерцало в лучах раннего утреннего солнца, аккуратно подстриженная трава была только что полита.
 
-Тесса разорвала объятия, когда увидела, как он появился в стеклянном дверном проёме. Ей показалось, что он выглядел подозрительно невозмутимым, всё ещё в той же одежде, в которой он был в конце коридора, которая была сухой, как кость. Айо, должно быть, успела выйти из в*нной как раз вовремя, чтобы успел Кевин, предположила она. Даже издалека она могла видеть, что его лицо определённо раскраснелось, как будто он бежал.
+Тесса разорвала объятия, когда увидела, как он появился в стеклянном дверном проёме. Ей показалось, что он выглядел подозрительно невозмутимым, всё ещё в той же одежде, в которой он был в конце коридора, которая была сухой, как кость. Айо, должно быть, успела выйти из туалета как раз вовремя, чтобы успел Кевин, предположила она. Даже издалека она могла видеть, что его лицо определённо раскраснелось, как будто он бежал.
 
 — Что с вами случилось, ребята? — крикнул он, не в силах отвести взгляд от мокрой пары.
 
@@ -190,7 +190,7 @@
 
 — А что насчёт тебя, Кев? Марк выстрелил в ответ, подозрительно глядя на своего друга: «Где ты пописил? Ты выглядел так же плохо, как я и Тесса, но теперь ты в порядке».
 
-Кевин отвернулся. «Я пошёл в в*нную после Айо, — сказал он тихо, — я только что сделал это».
+Кевин отвернулся. «Я пошёл в туалет после Айо, — сказал он тихо, — я только что сделал это».
 
 Марка это объяснение не удовлетворило, и он нёсся вверх по лестнице, одетый только в нижнее бельё, теперь уже меньшее, чем PG, но уронил его. — Счастливчик, — проворчал он.
 
@@ -200,7 +200,7 @@
 
 «Но это странно. Мы все пятеро проснулись почти в одно и то же время, собираясь обмочиться. Это ненормально», — сказала Тесса.
 
-«Ты уверен?» — скептически спросил Айо. Скептицизм был свойствен Айо. Для Айо всё имело логическое объяснение, подумала Тесса. И он обычно прав, чёрт возьми. «Это может быть просто совпадение. Мы все были пьяны прошлой ночью, и, может быть, звук моего входа в в*нную просто разбудил вас всех». Тесса могла видеть, что Марк выглядел слегка потрясённым этим аргументом, но заговорила Зоя. Даже держа в руках связку одежды, над которой она потеряла контроль всего несколько минут назад, к ней уже вернулась уверенность.
+«Ты уверен?» — скептически спросил Айо. Скептицизм был свойствен Айо. Для Айо всё имело логическое объяснение, подумала Тесса. И он обычно прав, чёрт возьми. «Это может быть просто совпадение. Мы все были пьяны прошлой ночью, и, может быть, звук моего входа в туалет просто разбудил вас всех». Тесса могла видеть, что Марк выглядел слегка потрясённым этим аргументом, но заговорила Зоя. Даже держа в руках связку одежды, над которой она потеряла контроль всего несколько минут назад, к ней уже вернулась уверенность.
 
 «Это всё ещё не объясняет, почему мы не видели Джейми. Он тоже должен был быть в отчаянии, у него было столько же колы, сколько у всех», — сказала она.
 
@@ -280,17 +280,17 @@
 
 ###
 
-Они согласовали порядок использования душа перед завтраком в зависимости от того, кто в этом больше всего нуждался. Все были счастливы позволить Джейми, который был голым, и половина его тела была забрызгана мочой, идти первым. После того, как их хозяин отправил свои грязные простыни в стиральную машину, где они присоединили к стирке всё ещё промокшую пижаму Зои, он заперся в в*нной, чтобы привести себя в порядок. Остальные пятеро сидели внизу за столом на кухне, которую, как рассудил Кевин, было бы легче всего убрать потом для тех, кто ещё не высох.
+Они согласовали порядок использования душа перед завтраком в зависимости от того, кто в этом больше всего нуждался. Все были счастливы позволить Джейми, который был голым, и половина его тела была забрызгана мочой, идти первым. После того, как их хозяин отправил свои грязные простыни в стиральную машину, где они присоединили к стирке всё ещё промокшую пижаму Зои, он заперся в туалете, чтобы привести себя в порядок. Остальные пятеро сидели внизу за столом на кухне, которую, как рассудил Кевин, было бы легче всего убрать потом для тех, кто ещё не высох.
 
-Айо, единственная, кто вовремя успела в туалет, стояла последней в очереди в душ. Он готовил чай и кофе для всех, пока они тихо сидели за столом, пытаясь переварить то, что произошло этим утром. Как единственный человек в доме, которому посчастливилось воспользоваться в*нной (никто на самом деле не поверил рассказу Кевина), Айо чувствовал, что именно он должен возобновить разговор.
+Айо, единственная, кто вовремя успела в туалет, стояла последней в очереди в душ. Он готовил чай и кофе для всех, пока они тихо сидели за столом, пытаясь переварить то, что произошло этим утром. Как единственный человек в доме, которому посчастливилось воспользоваться туалетом (никто на самом деле не поверил рассказу Кевина), Айо чувствовал, что именно он должен возобновить разговор.
 
 — Так что же это было, если не виски? — спросил он, и его встретила ошеломлённая тишина.
 
 «Я до сих пор не могу поверить, что пропалываю огород», — прошептала Тесса, явно слишком отвлечённая, чтобы слушать.
 
-«По крайней мере, ты не намочил свою пижаму», — последовал ответ Зои. В этот момент они услышали, как наверху открылась дверь в в*нную, и голос Джейми сказал, что настала очередь Марка. Он выглядел облегчённым, поднимаясь по лестнице, чтобы, наконец, вылезти из пары холодных мокрых боксёров.
+«По крайней мере, ты не намочил свою пижаму», — последовал ответ Зои. В этот момент они услышали, как наверху открылась дверь в туалет, и голос Джейми сказал, что настала очередь Марка. Он выглядел облегчённым, поднимаясь по лестнице, чтобы, наконец, вылезти из пары холодных мокрых боксёров.
 
-«Должно быть, дело в том количестве, которое мы выпили прошлой ночью», — сказал Айо, не видя другого объяснения. Он пока не был готов позволить сменить тему, поэтому добавил: «Всё остальное не имеет смысла. Должно быть, я разбудил вас, ребята, закрыв дверь в*нной. Джейми не слышал, потому что крепко спит».
+«Должно быть, дело в том количестве, которое мы выпили прошлой ночью», — сказал Айо, не видя другого объяснения. Он пока не был готов позволить сменить тему, поэтому добавил: «Всё остальное не имеет смысла. Должно быть, я разбудил вас, ребята, закрыв дверь туалета. Джейми не слышал, потому что крепко спит».
 
 — Это не объясняет, почему Джейми не нужно было… ну, идти… сначала, когда мы его разбудили, — заметил Кевин. Он казался взволнованным утренними событиями, что, по мнению Айо, было вполне справедливо. У них были чрезвычайно странные полчаса. «Не могу поверить, что он помочился на то растение перед нами».
 
@@ -304,7 +304,7 @@
 
 Тесса начала выглядеть гораздо более смущённой из-за своего простого наряда, когда утренний прилив адреналина прошёл, поэтому Кевин и Айо попытались помочь ей чувствовать себя более комфортно, стоя лицом друг к другу, когда они пили. В голове у Айо был вопрос, который он не мог дождаться, чтобы задать, поэтому он выплюнул его.
 
-«Кевин, что с тобой там случилось? Мы все знаем, что ты не пошёл в в*нную, как сказал». Лицо мужчины горело, и он начал смотреть на свою кружку с кофе, как будто думал, что может найти в ней смысл жизни.
+«Кевин, что с тобой там случилось? Мы все знаем, что ты не пошёл в туалет, как сказал». Лицо мужчины горело, и он начал смотреть на свою кружку с кофе, как будто думал, что может найти в ней смысл жизни.
 
 «Ничего страшного. Я спал на своей кровати», — пробормотал он, словно жалея, что они не спросили.
 
@@ -312,15 +312,15 @@
 
 «Я спрятал простыни в стирку вместе с остальными. Но вы не можете сказать Джейми или Зои. Пожалуйста, ребята. Я не против того, чтобы Марк знал, но не эти двое». Торжественно Айо и Тесса поклялись хранить тайну и выразили Кевину свои симпатии.
 
-Их снова прервал уже знакомый звук открывающейся двери в*нной, и теперь настала очередь Тессы пойти и привести себя в порядок. Но вместо этого она обратилась к Кевину, который был готов расплакаться.
+Их снова прервал уже знакомый звук открывающейся двери туалета, и теперь настала очередь Тессы пойти и привести себя в порядок. Но вместо этого она обратилась к Кевину, который был готов расплакаться.
 
 «Ты можешь идти первым, Кев. Я не чувствую себя такой уж нечистой, и мне даже не холодно», — любезно сказала она.
 
 «Уверен?» он спросил. Тесса заверила его, что да, и он ушёл, чтобы занять её место в душе. Но Айо подозревал, что была и другая причина, по которой она отпустила их друга раньше себя, и он был почти уверен, что знает, в чём причина. Упреждая её неизбежный вопрос, он сказал ей правду. Только тогда он полностью осознал, что Тесса Роудс была единственным человеком в группе, которому он доверял больше всего.
 
-«Тесса, я слишком долго был в этой в*нной, — сказал он ей, — я чувствую ответственность за то, что произошло».
+«Тесса, я слишком долго был в этом туалет, — сказал он ей, — я чувствую ответственность за то, что произошло».
 
-«Ну, ты не должен был, — коротко сказала она ему, — это не твоя вина. Даже если бы ты вышел на минуту быстрее, всё равно было бы три человека, которые не успели, включая меня». добавила она, «поскольку я была второй в очереди после Марка». Айо знал, что это было хотя бы отчасти правдой, и от этого ему действительно стало немного лучше, но он всё ещё задавался вопросом, было ли в доме больше пар сухого белья, если бы он поторопился. Было так много мочи, подумал он. Айо так ясно помнил всё это — он проснулся, срочно бросился в в*нную и мочился целых две минуты. Он вышел в пустой коридор, когда ему только что сказали, что их четверо, и тут же его охватило безмерное чувство вины.
+«Ну, ты не должен был, — коротко сказала она ему, — это не твоя вина. Даже если бы ты вышел на минуту быстрее, всё равно было бы три человека, которые не успели, включая меня». добавила она, «поскольку я была второй в очереди после Марка». Айо знал, что это было хотя бы отчасти правдой, и от этого ему действительно стало немного лучше, но он всё ещё задавался вопросом, было ли в доме больше пар сухого белья, если бы он поторопился. Было так много мочи, подумал он. Айо так ясно помнил всё это — он проснулся, срочно бросился в туалет и ссал целых две минуты. Он вышел в пустой коридор, когда ему только что сказали, что их четверо, и тут же его охватило безмерное чувство вины.
 
 Джейми спустилась вниз в чистой одежде, явно огорчённая. Он посмотрел Айо и Тессе в глаза один за другим и сказал ровным голосом.
 
@@ -342,7 +342,7 @@
 
 «О, Джейми, я просто не думаю, что ты выглядишь так же хорошо, когда твоя сладкая попка прикрыта». Тесса застонала — это слишком для взрослых. Зои выбрала этот момент, чтобы вальсировать вниз по лестнице, кудахча про себя. Неудивительно, что она, казалось, уже полностью оправилась от аварии. Айо не ожидал ничего другого от женщины, которая регулярно объявляла, что слила информацию после того, как сильно посмеялась. На лице Джейми отразилась смесь унижения и лести. Айо мог сказать, что его друг не возражал против комплиментов Зои, даже в шутку.
 
-В предпоследний раз за утро дверь в*нной открылась. Тесса встала, явно стремясь принять душ и переодеться. Айо не имел привычки думать о нижнем белье своего друга, но он мог представить, что сырость на трусиках Тессы, где она не успела вовремя добраться до сада, уже была более чем неприятно холодной. Она подошла к подножию лестницы, повернулась и заговорила с Джейми.
+В предпоследний раз за утро дверь туалет открылась. Тесса встала, явно стремясь принять душ и переодеться. Айо не имел привычки думать о нижнем белье своего друга, но он мог представить, что сырость на трусиках Тессы, где она не успела вовремя добраться до сада, уже была более чем неприятно холодной. Она подошла к подножию лестницы, повернулась и заговорила с Джейми.
 
 «Я хочу, чтобы ты решил, что мы будем делать сегодня, к тому времени, когда я выйду из душа, приятель. Нам всем нужно что-то, чтобы отвлечься от сегодняшнего утра».
 
@@ -358,7 +358,7 @@
 
 Говоря об Айо, Зои подумала, что он казался немного рассеянным весь день — он, похоже, был единственным, кто не смог забыть об утренних событиях, что, по её мнению, было странно, учитывая, что он получил лучший конец. сделки. Тем не менее, это был великолепный день, и часы уже пробили шесть, когда они сошли с поезда и направились к дому Джейми, чтобы приготовиться к вечеру в одном из его любимых местных ресторанов.
 
-Ноги Зои уже болели, когда она добралась до своей комнаты и начала выбирать ресторанную одежду. Перед такими вечерами у неё был ритуал: включить какую-нибудь музыку на телефоне, просмотреть все доступные предметы одежды, пока она не выбрала идеальный наряд, и разложить всё это на кровати, пока собиралась. Сегодня в порядке вещей фиолетовое платье поверх чёрного нижнего белья, которое она обычно находила более удобным, чем её более лёгкие комплекты. Как только всё было аккуратно разложено на её одеяле, Зои схватила полотенце и направилась в в*нную по коридору, чтобы смыть пот, который она выработала на парижской жаре.
+Ноги Зои уже болели, когда она добралась до своей комнаты и начала выбирать ресторанную одежду. Перед такими вечерами у неё был ритуал: включить какую-нибудь музыку на телефоне, просмотреть все доступные предметы одежды, пока она не выбрала идеальный наряд, и разложить всё это на кровати, пока собиралась. Сегодня в порядке вещей фиолетовое платье поверх чёрного нижнего белья, которое она обычно находила более удобным, чем её более лёгкие комплекты. Как только всё было аккуратно разложено на её одеяле, Зои схватила полотенце и направилась в туалет по коридору, чтобы смыть пот, который она выработала на парижской жаре.
 
 Вода в душе была божественной на её голой коже. Зоя всегда любила принимать душ, но чем длиннее день, тем приятнее ей было принимать душ. Она позволила горячей воде стекать по её каштановым волосам, по спине, по бёдрам. Как это часто бывало, тепло жидкости насторожило её о смутном желании помочиться, поэтому она без колебаний подчинилась. Моча в душе была невольным удовольствием Зои; она не могла вспомнить время, когда ей не нравилось опорожнять мочевой пузырь, когда вокруг неё мчалась вода. Это было каким-то абстрактным и озорным образом, как будто она просто добавляла воды в водопад, предлагая свой маленький вклад в реку, которая текла вокруг её ног и журчала в канализацию. И это было намного проще, чем выйти и просто посидеть в унитазе тридцать секунд. Зоя солгала бы, если бы сказала, что иногда не приберегает утреннюю мочу для душа, но если бы её спросили, она бы горячо ответила, что это мера экономии времени.
 
@@ -380,7 +380,9 @@
 
 — В «Короле Льве» было много чего не так, — прорычал Марк с возмущением в горле, — во-первых: почему? Что за…
 
-Но первые угли оживлённой тирады Марка были прерваны преждевременным возвращением Тессы с перерыва в в*нной. — Это было быстро, — прокомментировала Зои, тут же задаваясь вопросом, зачем она вообще что-то сказала. Тесса посмотрела на стол.
+Но первые угли оживлённой тирады Марка были прерваны преждевременным возвращением Тессы с перерыва в туалет. 
+
+— Это было быстро, — прокомментировала Зои, тут же задаваясь вопросом, зачем она вообще что-то сказала. Тесса посмотрела на стол.
 
 «Он закрыт, — сказала она, — не по порядку».
 
@@ -416,7 +418,9 @@
 
 «Подождите, ребята, подождите, — сказал Кевин, пытаясь говорить спокойно, — даже если Айо прав — что значит, что это не было разовым случаем? Почему мы так уверены, что это произойдёт снова?»
 
-«Чувак, мы посреди дорогого ресторана с неисправной в*нной, — огрызнулся Марк, — ты действительно хочешь так рисковать?». Кевин, казалось, понял его точку зрения.
+«Чувак, мы посреди дорогого ресторана с неисправным туалетом, — огрызнулся Марк, — ты действительно хочешь так рисковать?». 
+
+Кевин, казалось, понял его точку зрения.
 
 Тесса встала. Зоя думала, что в ней есть красота даже сейчас, когда она явно паниковала, а её голос звучал более властно, чем любой другой.
 
@@ -462,7 +466,7 @@
 
 — Мы не можем думать об этом прямо сейчас, — коротко сказал Айо, и он увидел, что она знает, что он прав — сейчас у них был только один приоритет, и это не разгадывание тайн. Он посмотрел на Тессу, которая до сих пор молчала. Возможно, сияние полной луны сыграло с ним злую шутку, но Айо подумала, что она выглядела так, будто увидела привидение. Он часто чувствовал, что при правильном освещении она не смотрела на миллион километров от его матери, когда он был ребёнком.
 
-Однажды вечером его мать, вернувшись домой с работы, обнаружила десятилетнего Айо, радостно играющего в в*нной с дешёвым электрическим радиоприёмником. Если бы он уронил его в воду, возможно, ему было бы больно. Но Айо не думал об этом, пока не увидел свою мать в дверях в*нной комнаты, у которой чуть ли не сердечный приступ. Это было чувство, которое он испытал от лица Тессы сегодня вечером — она смотрела на весь мир так, как будто была слишком напугана, чтобы говорить, губы были плотно сжаты, глаза сосредоточены. Он оставил её в покое и сосредоточился на правильном пути.
+Однажды вечером его мать, вернувшись домой с работы, обнаружила десятилетнего Айо, радостно играющего в туалете с дешёвым электрическим радиоприёмником. Если бы он уронил его в воду, возможно, ему было бы больно. Но Айо не думал об этом, пока не увидел свою мать в дверях, у которой чуть ли не сердечный приступ. Это было чувство, которое он испытал от лица Тессы сегодня вечером — она смотрела на весь мир так, как будто была слишком напугана, чтобы говорить, губы были плотно сжаты, глаза сосредоточены. Он оставил её в покое и сосредоточился на правильном пути.
 
 Только тогда он понял, что Марка и Кевина больше нет.
 
